# cs262-logical-clocks

./: .gitignore  README.md  config_example.json  pyproject.toml
docs/: design.md
docs/notebooks/: catherineyeh.md  junemoretz.md
system/: analyze_logs.py  logger.py  machine.py  main.py
system/logs/exp_1/: README.md
system/logs/exp_2/: README.md
system/logs/exp_3/: README.md
system/tests/: test_machine.py
