[project]
name = "cs262-logical-clocks"
version = "0.1.0"
description = ""
authors = [
    {name = "Catherine Yeh",email = "catherineyeh@g.harvard.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false